2022-11-29T16:25:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3576018863 # 273
* notice: last 14d: unq all: 2 19
* notice: prev accum: outdated-unq outdated-all / unq all: 89 244 / 102 264
* notice: next accum: outdated-unq outdated-all / unq all: 90 246 / 102 265
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-15] / []

2022-11-29T08:23:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3572268379 # 272
* notice: last 14d: unq all: 2 20
* notice: prev accum: outdated-unq outdated-all / unq all: 89 244 / 102 265
* notice: next accum: outdated-unq outdated-all / unq all: 89 244 / 102 264
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-15]

2022-11-28T16:20:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3566651637 # 270
* notice: last 14d: unq all: 2 21
* notice: prev accum: outdated-unq outdated-all / unq all: 88 243 / 101 264
* notice: next accum: outdated-unq outdated-all / unq all: 89 244 / 102 265
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-11-14] / [2022-11-28]

2022-11-28T01:26:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3560902344 # 268
* notice: last 14d: unq all: 1 21
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 101 264
* notice: next accum: outdated-unq outdated-all / unq all: 88 243 / 101 264
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-13] / []

2022-11-26T16:23:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3554480358 # 264