@@ -1,3 +1,11 @@
+2022-11-30T01:35:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3579521204 # 274
+* notice: last 14d: unq all: 2 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 90 246 / 102 265
+* notice: next accum: outdated-unq outdated-all / unq all: 90 246 / 102 264
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-16]
+
 2022-11-29T16:25:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3576018863 # 273
 * notice: last 14d: unq all: 2 19
